--- a/index.html
+++ b/index.html
@@ -25,21 +25,20 @@
   <center>
   <div style="margin-left:20vw;margin-right:20vw;text-align:left">
     <br><br>
-    <h2>Jack Ceroni - Personal Website</h2>
-    <br>
+    <h2>Jack Ceroni</h2>
+    <h5 style="color:grey;margin-top:-5px;margin-bottom:20px;">Personal Website</h5>
     <div style="width:600px;">
     <h3>About Me</h3>
     <p style="line-height:1.6">Hello there! My name is Jack, and I'm a high school student from the Greater Toronto Area with interests in mathematics, physics, engineering and quantum computing.
     In my free time, I like to:</p>
     <ul style="line-height:1.6">
     <li>Entangle qubits (fake ones, I don't have enough money to buy the real thing...)</li>
-    <li>Build a robot army (my ranks currently have two soldiers, both of which fall apart if left running for over 5 minutes)</li>
     <li>"Prove" "theorems"</li>
     <li>Solve hopelessly long integrals to find expectation values</li>
     <li>Set digital trees on fire with my homemade computer simulations</li>
 </ul>
-<p style="line-height:1.6">Other than doing the stuff on the above list, I have been <b>incredibly lucky</b> to have a lot of cool experiences that have allowed me to develop my knowledge further in the past few years!
-This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a co-contributor to a <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a> (it's actually not that impressive, there are a lot of co-authors :), being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a>
+<p style="line-height:1.6">Over the past couple years, I have had some very interesting experiences.
+This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a co-contributor to a <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a> (it's actually not that impressive, there are a lot of co-authors), being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a>
 and having the extremely awesome opportunity to take part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>.</p>
 <p style="line-height:1.6">I'm currently working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing!</p>
 </div>
@@ -50,7 +49,7 @@ and having the extremely awesome opportunity to take part in the <a href="https:
     <br>
     <p><a href="https://lucaman99.github.io/newsletters/">Subscribe to my monthly newsletter!</a></p>
     <br>
-    <p>. . . . . . . . . . . . . . . . . .</p>
+    <hr class="line">
     <br>
     <h3>Current Projects</h3>
     <ul>
@@ -64,7 +63,7 @@ and having the extremely awesome opportunity to take part in the <a href="https:
       <li><b style="font-size:14px;"><a href="https://lucaman99.github.io/content">Additional Content/Other Fun Stuff</a></b></li>
     </ul>
       <br>
-      <p>. . . . . . . . . . . . . . . . . .</p>
+      <hr class="line">
       <br>
     <h3>Media</h3>
     <ul>
@@ -74,19 +73,27 @@ and having the extremely awesome opportunity to take part in the <a href="https:
       <br>
       <li><a href="https://www.insidehalton.com/community-story/9453012-burlington-students-rewarded-for-science-ingenuity/">Inside Halton Article on Weston Youth Innovation Award</a></li>
     </ul>
-      <br><br><br><br>
-</div>
-</center>
+    <br><br><br><br>
+  </div>
+  </center>
 </body>
-  <style>
-    body {
-      font-family:"Lucida Console", Monaco, monospace
-    }
-    ul {
-      font-size:13px;
-    }
-    p {
-      font-size:13px;
-    }
-  </style>
+<style>
+ body {
+     font-family:"Lucida Console", Monaco, monospace
+ }
+ ul {
+     font-size:13px;
+ }
+ p {
+     font-size:13px;
+ }
+ .line {
+     border:0;
+     height:1px;
+     background-image:-webkit-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-moz-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
+ }
+</style>
 </html>
