--- a/morin/index.html
+++ b/morin/index.html
@@ -17,6 +17,7 @@
 <h2>David Morin Classical Mechanics: Solution Manual</h2>
 <h3>Solution Directory (Incomplete)</h3>
 <p>Chapter 2: <a href="https://lucaman99.github.io/morin/2/26.html">Problem 26</a></p>
+<p>Chapter 5: <a href="https://lucaman99.github.io/morin/5/13.html">Problem 13</a></p>
     <br><br><br>
     </div>
 </center>
