--- a/qm/index.html
+++ b/qm/index.html
@@ -24,6 +24,7 @@
 <a href="https://lucaman99.github.io/qm/4/57.html">Problem 4.57</a></p>
 <p>Chapter 5: <a href="https://lucaman99.github.io/qm/5/37.html">Problem 5.37</a></p>
 <p>Chapter 6: <a href="https://lucaman99.github.io/qm/6/5.html">Problem 6.5</a>, <a href="https://lucaman99.github.io/qm/6/7.html">Problem 6.7</a>, <a href="https://lucaman99.github.io/qm/6/10.html">Problem 6.10</a></p>
+<p>Chapter 9: <a href="https://lucaman99.github.io/qm/9/2.html">Problem 9.2</a></p>
 </div>
 </center>
 </body>
