--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -20,6 +20,8 @@
     <ul>
         <li><a href="https://preview.mailerlite.com/y6l5q6">October 2019 Newsletter</a></li>
         <li><a href="https://preview.mailerlite.com/d5f7p6">November 2019 Newsletter</a></li>
+        <li><a href="https://preview.mailerlite.com/u8i3f4">December 2019 Newsletter</a></li>
+        <li><a href="https://preview.mailerlite.com/j3g3x0">January/February 2020 Newsletter</a></li>
             <br>
     </ul>
     </div>
