--- a/new_blog/index.html
+++ b/new_blog/index.html
@@ -16,6 +16,10 @@
                 <! -- $|\alpha\rangle \ = \ e^{-\frac{|\alpha|^2}{2}} \ \displaystyle\sum_{n \ = \ 0}^{\infty} \ \frac{\alpha^n}{\sqrt{n!}} |n\rangle$ -->
             <h5>A semi-coherent assortment of thoughts, ramblings and theorems</h5>
             <hr class="line">
+            <h4 style="padding-top:15px;font-size:14px;"><b>2020</b></h4>
+            <ul>
+                <li>Mar 16 2020 // <a href="https://lucaman99.github.io/new_blog/2019/mar16.html">Fun With Graphs and QAOA</a></li>
+            </ul>
                 <h4 style="padding-top:15px;font-size:14px;"><b>2019</b></h4>
                 <ul>
                     <li>Dec 28 2019 // <a href="https://lucaman99.github.io/new_blog/2019/dec28_1.html">Density Matrices (Test Post)</a></li>
