--- a/munkres/index.html
+++ b/munkres/index.html
@@ -19,7 +19,7 @@
 <p>Assorted Proofs to Random Propositions in Munkres: <a href="https://lucaman99.github.io/munkres/other_proofs.html">Here</a></p>
 <p>Section 16: <a href="https://lucaman99.github.io/munkres/16/9.html">Problem 9</a></p>
 <p>Section 17: <a href="https://lucaman99.github.io/munkres/17/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/17/2.html">Problem 2</a>, <a href="https://lucaman99.github.io/munkres/17/4.html">Problem 4</a>, <a href="https://lucaman99.github.io/munkres/17/13.html">Problem 13</a>, <a href="https://lucaman99.github.io/munkres/17/19.html">Problem 19 (Incomplete)</a></p>
-    <p>Section 18: <a href="https://lucaman99.github.io/munkres/18/9.html">Problem 9</a>, <a href="https://lucaman99.github.io/munkres/18/11.html">Problem 11</a></p>
+    <p>Section 18: <a href="https://lucaman99.github.io/munkres/18/11.html">Problem 11</a></p>
     <p>Section 19: <a href="https://lucaman99.github.io/munkres/19/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/19/2.html">Problem 2</a></p>
     <p>Section 20: <a href="https://lucaman99.github.io/munkres/20/9.html">Problem 9</a>, <a href="https://lucaman99.github.io/munkres/20/11.html">Problem 11</a></p>
     <p>Section 21: <a href="https://lucaman99.github.io/munkres/21/8.html">Problem 8</a>, <a href="https://lucaman99.github.io/munkres/21/11.html">Problem 11</a></p>
