--- a/morin/index.html
+++ b/morin/index.html
@@ -18,7 +18,7 @@
 <h3>Solution Directory (Incomplete)</h3>
 <p>Chapter 2: <a href="https://lucaman99.github.io/morin/2/26.html">Problem 26</a></p>
 <p>Chapter 3: <a href="https://lucaman99.github.io/morin/3/71.html">Problem 71</a></p>
-<p>Chapter 5: <a href="https://lucaman99.github.io/morin/5/13.html">Problem 13</a></p>
+<p>Chapter 5: <a href="https://lucaman99.github.io/morin/5/13.html">Problem 13</a>, <a href="https://lucaman99.github.io/morin/5/66.html">Problem 66</a></p>
     <br><br><br>
     </div>
 </center>
