--- a/index.html
+++ b/index.html
@@ -20,80 +20,53 @@
 
 <body>
   <div style="float:right;position:absolute;right:30vw;margin-top:100px;">
-    <img src="yessir.png" style="height:600px;position:absolute;">
   </div>
-  <center>
-  <div style="margin-left:20vw;margin-right:20vw;text-align:left">
-    <br><br>
-    <h2>Jack Ceroni</h2>
-    <h5 style="color:grey;margin-top:-5px;margin-bottom:20px;">Personal Website</h5>
-    <div style="width:600px;">
+  <div style="text-align:left">
+    <h1 style="padding-top:5px;">Jack Ceroni's Home Page</h1>
+    <div style="width:700px;">
     <h3>About Me</h3>
-    <p style="line-height:1.6">Hello there! My name is Jack, and I'm a high school student from the Greater Toronto Area with interests in mathematics, physics, engineering and quantum computing.
+    <p>Hello there! My name is Jack, and I'm a high school student from the Greater Toronto Area with interests in mathematics, physics, engineering and quantum computing.
     In my free time, I like to:</p>
-    <ul style="line-height:1.6">
+    <ul>
     <li>Entangle qubits (fake ones, I don't have enough money to buy the real thing...)</li>
     <li>"Prove" "theorems"</li>
     <li>Solve hopelessly long integrals to find expectation values</li>
     <li>Set digital trees on fire with my homemade computer simulations</li>
 </ul>
-<p style="line-height:1.6">Over the past couple years, I have had some very interesting experiences.
+<p>Over the past couple years, I have had some very interesting experiences.
 This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a co-contributor to a <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a> (it's actually not that impressive, there are a lot of co-authors), being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a>
 and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>.</p>
-<p style="line-height:1.6">I'm currently working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing.</p>
+<p>I'm currently working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing.</p>
 </div>
     <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
-    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://medium.com/@jackceroni">Medium</a> | <a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/">Linkedin</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> </p>
+    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> </p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
-    <br>
     <p><a href="https://lucaman99.github.io/newsletters/">Subscribe to my monthly newsletter</a></p>
     <br>
-    <hr class="line">
+    <hr style="width:700px;float:left;">
     <br>
     <h3>Current Projects</h3>
     <ul>
       <br>
-      <li><b style="font-size:14px;"><a href="https://lucaman99.github.io/qc">Quantum Computing</a></b></li>
-      <br>
-      <li><b style="font-size:14px;"><a href="https://lucaman99.github.io/math">Pure/Applied Mathematics</a></b></li>
-      <br>
-      <li><b style="font-size:14px;"><a href="https://lucaman99.github.io/physics">Physics</a></b></li>
-      <br>
-      <li><b style="font-size:14px;"><a href="https://lucaman99.github.io/content">Additional Content/Other Fun Stuff</a></b></li>
+      <li><a href="https://lucaman99.github.io/qc">Quantum Computing</a></li>
+      <li><a href="https://lucaman99.github.io/math">Pure/Applied Mathematics</a></li>
+      <li><a href="https://lucaman99.github.io/physics">Physics</a></li>
+      <li><a href="https://lucaman99.github.io/content">Additional Content/Other Fun Stuff</a></li>
     </ul>
-      <br>
-      <hr class="line">
-      <br>
-    <h3>Media</h3>
-    <ul>
-      <li><a href="https://globalnews.ca/video/5432964/young-innovators-recognized-by-ontario-science-centre">Global News Interview for Weston Youth Innovation Award</a></li>
-      <br>
-      <li><a href="https://globalnews.ca/news/5435543/teens-win-innovation-awards/">Another Global News Article for Weston Youth Innovation Award</a></li>
-      <br>
-      <li><a href="https://www.insidehalton.com/community-story/9453012-burlington-students-rewarded-for-science-ingenuity/">Inside Halton Article on Weston Youth Innovation Award</a></li>
-    </ul>
-    <br><br><br><br>
+    <br><br>
+    <hr style="width:700px;float:left;">
   </div>
-  </center>
 </body>
 <style>
  body {
-     font-family:"Lucida Console", Monaco, monospace
+     font-family:'Times New Roman', Times, serif;
  }
  ul {
-     font-size:13px;
+     font-size:16px;
  }
  p {
-     font-size:13px;
- }
- .line {
-     border:0;
-     height:1px;
-     background-image:-webkit-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
-     background-image:-moz-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
-     background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
-     background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
+     font-size:16px;
  }
 </style>
 </html>
