--- a/nomadiq/about.html
+++ b/nomadiq/about.html
@@ -12,16 +12,18 @@
   <center>
   <div style="margin-left:20vw;margin-right:20vw;text-align:left">
     <br><br>
-    <h2>Nomadiq</h2>
-    <b><p style="padding-top:5px;">An open-source quantum computing initiative</p></b>
+    <h2>About Us</h2>
     <br>
     <hr class="line">
     <br>
     <div style="width:800px;font-size:13px;padding-top:10px;line-height:2.0;">
-      Advancements in near-term quantum algorithms have the potential to impact fields of science from chemsitry to optimization in many novel and interesting ways.
-      The goal of Nomadiq is to actualize the power of these algorithms by creating resources and research that help to advance the field of NISQ quantum computation.
+      Nomadiq is an open-source initiative built by people who love quantum computing, and are excited to see near-term quantum algorithms impact the world in the coming decades. We welcome contributions
+      to any of our active projects, so don't hesitate to get in touch with us!
       <br><br>
-      <a href="https://lucaman99.github.io/current/index.html" style="color:#1a7cdb">Current Projects and Research</a> | <a href="#" style="color:#1a7cdb">News</a> | <a href="#" style="color:#1a7cdb">About Us</a> 
+      <h2>Current Contributors</h2>
+      <ul>
+          <li>Jack Ceroni - <a href="https://lucaman99.github.io">Website</a></li>
+      </ul>
     </div>
     </div>
     </body>
@@ -45,5 +47,5 @@
      background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
      background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
  }
- a:hover{text-decoration:none;color:grey}a{color:#000}
+ a:hover{text-decoration:none;}a{color:#1a7dcb}
     </style>
