--- a/nomadiq/current/index.html
+++ b/nomadiq/current/index.html
@@ -12,16 +12,17 @@
   <center>
   <div style="margin-left:20vw;margin-right:20vw;text-align:left">
     <br><br>
-    <h2>Nomadiq</h2>
-    <b><p style="padding-top:5px;">An open-source quantum computing initiative</p></b>
+    <h2>Current Projects and Research</h2>
     <br>
     <hr class="line">
     <br>
-    <div style="width:800px;font-size:13px;padding-top:10px;line-height:2.0;">
-      Advancements in near-term quantum algorithms have the potential to impact fields of science from chemsitry to optimization in many novel and interesting ways.
-      The goal of Nomadiq is to actualize the power of these algorithms by creating resources and research that help to advance the field of NISQ quantum computation.
+    <div style="width:800px;font-size:13px;line-height:2.0;">
+    <h3>OpenQML</h3>
+    <p>The goal of the OpenQML projct is to demystify and democratize near-term quantum algorithms and quantum machine learning through the creation 
+        of educational resources and quantum computational simulations, all relating to recently-proposed research.</p> <p style="color:#1a7cdb;"><a href="#" style="color:#1a7cdb;">Learn More</a></p>
+    </p>
+      
       <br><br>
-      <a href="https://lucaman99.github.io/current/index.html" style="color:#1a7cdb">Current Projects and Research</a> | <a href="#" style="color:#1a7cdb">News</a> | <a href="#" style="color:#1a7cdb">About Us</a> 
     </div>
     </div>
     </body>
