--- a/nomadiq/openqml/roadmap.html
+++ b/nomadiq/openqml/roadmap.html
@@ -12,16 +12,26 @@
   <center>
   <div style="margin-left:20vw;margin-right:20vw;text-align:left">
     <br><br>
-    <h2>Nomadiq</h2>
-    <b><p style="padding-top:5px;">An open-source quantum computing initiative</p></b>
+    <h2>OpenQML Project Roadmap</h2>
     <br>
     <hr class="line">
     <br>
     <div style="width:800px;font-size:13px;padding-top:10px;line-height:2.0;">
-      Advancements in near-term quantum algorithms have the potential to impact fields of science from chemsitry to optimization in many novel and interesting ways.
-      The goal of Nomadiq is to actualize the power of these algorithms by creating resources and research that help to advance the field of NISQ quantum computation.
+      <p>In the coming months, our plans are to continue expanding the OpenQML gallery. Over the course of the next 6 months, we hope to introduce Notebooks on the following topics
+          to the gallery:
+          <br><br>
+          <ul>
+              <li>Proof-of-Concept Protein Folding With QAOA</li>
+              <li>Basic Quantum Cellular Automata</li>
+              <li>Many-Body Quantum Simulations with Different Ansatzes</li>
+              <li>Quantum Hamiltonian Based Models</li>
+              <li>Foundational Quantum Machine Learning</li>
+          </ul>
+          <br>
+          In addition to this, we are in the process of making modifications to our pre-existing Notebooks, in order to make them even more comprehensive and accessible. Finally, we are also hoping to
+          scale the project by accepting contributions from the quantum open-source community, to make our gallery even more diverse by drawing upon the unique skills of many different individuals.
+      </p>
       <br><br>
-      <a href="https://lucaman99.github.io/current/index.html" style="color:#1a7cdb">Current Projects and Research</a> | <a href="#" style="color:#1a7cdb">News</a> | <a href="#" style="color:#1a7cdb">About Us</a> 
     </div>
     </div>
     </body>
