--- a/nomadiq/index.html
+++ b/nomadiq/index.html
@@ -21,7 +21,7 @@
       Advancements in near-term quantum algorithms have the potential to impact fields of science from chemsitry to optimization in many novel and interesting ways.
       The goal of Nomadiq is to actualize the power of these algorithms by creating resources and research that help to advance the field of NISQ quantum computation.
       <br><br>
-      <a href="https://lucaman99.github.io/current/index.html" style="color:#1a7cdb">Current Projects and Research</a> | <a href="#" style="color:#1a7cdb">News</a> | <a href="#" style="color:#1a7cdb">About Us</a> 
+      <a href="https://lucaman99.github.io/nomadiq/current/index.html" style="color:#1a7cdb">Current Projects and Research</a> | <a href="https://lucaman99.github.io/nomadiq/news.html" style="color:#1a7cdb">News</a> | <a href="https://lucaman99.github.io/nomadiq/about.html" style="color:#1a7cdb">About Us</a> 
     </div>
     </div>
     </body>
