--- a/nomadiq/current/index.html
+++ b/nomadiq/current/index.html
@@ -19,7 +19,7 @@
     <div style="width:800px;font-size:13px;line-height:2.0;">
     <h3>OpenQML</h3>
     <p>The goal of the OpenQML projct is to demystify and democratize near-term quantum algorithms and quantum machine learning through the creation 
-        of educational resources and quantum computational simulations, all relating to recently-proposed research.</p> <p style="color:#1a7cdb;"><a href="#" style="color:#1a7cdb;">Learn More</a></p>
+        of educational resources and quantum computational simulations, all relating to recently-proposed research.</p> <p style="color:#1a7cdb;"><a href="https://lucaman99.github.io/nomadiq/openqml/gallery.html" style="color:#1a7cdb;">See OpenQML Gallery</a></p>
     </p>
       
       <br><br>
