--- a/nomadiq/openqml/gallery.html
+++ b/nomadiq/openqml/gallery.html
@@ -25,31 +25,31 @@
       <br>
       <div class= "card">
       <h3 style="font-size:17px;">Variational Quantum Thermalizer (VQT)</h3>
-        <p>A Python Notebook on the recently-proposed Variational Quantum Thermalizer (a new method for finding thermal states using variational quantum circuits).</p>
+        <p>A Python Notebook on the recently-proposed Variational Quantum Thermalizer (a new method for finding thermal states using variational quantum circuits), implemented in Qiskit, Cirq, and Pennylane.</p>
         <a href="https://nbviewer.jupyter.org/github/Lucaman99/qiskit-textbook/blob/vqt/ch-paper-implementations/vqt_textbook.ipynb">View Notebook</a>
       </div>
         <br><br>
         <div class= "card">
           <h3 style="font-size:17px;">Continuous-Variable QAOA</h3>
-            <p>A Python Notebook on the continuous-variable counterpart of QAOA implemented with the Strawberry Fields photonic quantum computing simulation library</p>
+            <p>A Python Notebook on the continuous-variable counterpart of QAOA implemented with the Strawberry Fields photonic quantum computing simulation library.</p>
             <a href="https://nbviewer.jupyter.org/github/Lucaman99/Quantum-Computing/blob/master/xanadu/cvqaoa.ipynb">View Notebook</a>
           </div>
           <br><br>
           <div class= "card">
             <h3 style="font-size:17px;">Quantum Graph Neural Networks</h3>
-              <p>An introductory Python Notebook on the Quantum Approximate Optimization Algorithm, and how it can be applied to solving different combinatorial problems.</p>
+              <p>A Python Notebook on learning from quantum data, with an underlying graphical structure, implemented in the Pennylane quantum machine learning library.</p>
               <a href="#">View Notebook (COMING SOON)</a>
             </div>
             <br><br>
             <div class= "card">
               <h3 style="font-size:17px;">The Variational Quantum Linear Solver (VQLS)</h3>
-                <p>An introductory Python Notebook on the Quantum Approximate Optimization Algorithm, and how it can be applied to solving different combinatorial problems.</p>
+                <p>A Python Notebook on the Variational Quantum Linear Solver (a recently proposed quantum algorithm for matrix inversion), implemented in Qiskit.</p>
                 <a href="https://nbviewer.jupyter.org/github/Lucaman99/qiskit-textbook/blob/vqls/ch-paper-implementations/vqls.ipynb">View Notebook</a>
               </div>
               <br><br>
           <div class= "card">
             <h3 style="font-size:17px;">Variational Thermofield Double State Generation</h3>
-              <p>An introductory Python Notebook on the Quantum Approximate Optimization Algorithm, and how it can be applied to solving different combinatorial problems.</p>
+              <p>A Python Notebook on generating Thermofield Double States with variational circuits, implemented in Cirq.</p>
               <a href="#">View Notebook (COMING SOON)</a>
             </div>
             <br><br>
@@ -57,13 +57,13 @@
             <br><br>
             <div class= "card">
               <h3 style="font-size:17px;">The Variational Quantum Eigensolver</h3>
-                <p>An introductory Python Notebook on the Quantum Approximate Optimization Algorithm, and how it can be applied to solving different combinatorial problems.</p>
+                <p>An introductory Python Notebook on the Variational Quantum Eigensolver, implemented in Cirq.</p>
                 <a href="#">View Notebook (COMING SOON)</a>
               </div>
               <br><br>
               <div class= "card">
                 <h3 style="font-size:17px;">The Quantum Approximate Optimization Algorithm (QAOA)</h3>
-                  <p>An introductory Python Notebook on the Quantum Approximate Optimization Algorithm, and how it can be applied to solving different combinatorial problems.</p>
+                  <p>An introductory Python Notebook on the Quantum Approximate Optimization Algorithm, and how it can be applied to solving different combinatorial problems, implemented in Cirq.</p>
                   <a href="#">View Notebook (COMING SOON)</a>
                 </div>
               <br><br>
@@ -110,5 +110,8 @@
    padding-left:25px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    padding-bottom:25px;
+ }
+ .card p {
+  padding-right:5px;
  }
     </style>
