--- a/new_blog/index.html
+++ b/new_blog/index.html
@@ -15,6 +15,8 @@
             <h2>The Coherent St$|\alpha\rangle$te</h2>
                 <! -- $|\alpha\rangle \ = \ e^{-\frac{|\alpha|^2}{2}} \ \displaystyle\sum_{n \ = \ 0}^{\infty} \ \frac{\alpha^n}{\sqrt{n!}} |n\rangle$ -->
             <h5>A semi-coherent assortment of thoughts, ramblings and theorems</h5>
+            <a href="https://lucaman99.github.io/new_blog/disclaimer.html" style="font-size:11px;">Political Post Disclaimer</a>
+            <br><br>
             <hr class="line">
             <h4 style="padding-top:15px;font-size:14px;"><b>2020</b></h4>
             <ul>
@@ -50,5 +52,5 @@
      background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
      background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
  }
- a:hover{text-decoration:none;color:grey}a{color:#000}
+ a:hover{text-decoration:none;color:grey}a{color:#000;}
 </style>
