--- a/nomadiq/openqml/gallery.html
+++ b/nomadiq/openqml/gallery.html
@@ -21,7 +21,7 @@
     <hr class="line">
     <br>
     <div style="width:800px;font-size:11px;padding-top:5px;line-height:2.0;">
-      <h1 style="font-size:20px;">Recent Papers</h1>
+      <h1 style="font-size:20px;">Recent Paper Implementations</h1>
       <br>
       <div class= "card">
       <h3 style="font-size:17px;">Variational Quantum Thermalizer (VQT)</h3>
@@ -56,6 +56,12 @@
             <h1 style="font-size:20px;">Foundational Knowledge</h1>
             <br><br>
             <div class= "card">
+              <h3 style="font-size:17px;">Linear Algebra Fundamentals</h3>
+                <p>An introduction to linear algebra for quantum computation.</p>
+                <a href="https://nbviewer.jupyter.org/github/Lucaman99/qiskit-textbook/blob/lin_alg/ch-prerequisites/linear_algebra.ipynb">View Notebook</a>
+              </div>
+              <br><br>
+            <div class= "card">
               <h3 style="font-size:17px;">The Variational Quantum Eigensolver</h3>
                 <p>An introductory Python Notebook on the Variational Quantum Eigensolver, implemented in Cirq.</p>
                 <a href="#">View Notebook (COMING SOON)</a>
@@ -64,7 +70,7 @@
               <div class= "card">
                 <h3 style="font-size:17px;">The Quantum Approximate Optimization Algorithm (QAOA)</h3>
                   <p>An introductory Python Notebook on the Quantum Approximate Optimization Algorithm, and how it can be applied to solving different combinatorial problems, implemented in Cirq.</p>
-                  <a href="#">View Notebook (COMING SOON)</a>
+                  <a href="https://nbviewer.jupyter.org/github/Lucaman99/openqml/blob/master/notebooks/qaoa.ipynb">View Notebook</a>
                 </div>
               <br><br>
               <div class="card">
