--- a/nomadiq/openqml/roadmap.html
+++ b/nomadiq/openqml/roadmap.html
@@ -16,8 +16,9 @@
     <br>
     <hr class="line">
     <br>
-    <div style="width:800px;font-size:13px;padding-top:10px;line-height:2.0;">
-      <p>In the coming months, our plans are to continue expanding the OpenQML gallery. Over the course of the next 6 months, we hope to introduce Notebooks on the following topics
+    <div style="width:800px;font-size:13px;line-height:2.0;">
+      <h3>Phase I</h3>
+      <p>Over the course of the next 4 months, our plans are to continue expanding the OpenQML gallery. We hope to introduce Notebooks on the following topics
           to the gallery:
           <br><br>
           <ul>
@@ -25,12 +26,19 @@
               <li>Basic Quantum Cellular Automata</li>
               <li>Many-Body Quantum Simulations with Different Ansatzes</li>
               <li>Quantum Hamiltonian Based Models</li>
-              <li>Foundational Quantum Machine Learning</li>
+              <li>Foundational Quantum Machine Learning (i.e. Baqprop, Quantum Natural Gradient Descent, etc.)</li>
           </ul>
           <br>
           In addition to this, we are in the process of making modifications to our pre-existing Notebooks, in order to make them even more comprehensive and accessible. Finally, we are also hoping to
-          scale the project by accepting contributions from the quantum open-source community, to make our gallery even more diverse by drawing upon the unique skills of many different individuals.
+          scale the project by accepting contributions from the quantum open-source community, to make our gallery even more diverse by drawing upon the unique skills of many different individuals. We also
+          hop to "translate" our new Notebooks and our existing Notebooks to a variety of the different quantum programming languages (Cirq, Qiskit, Pennylane, etc.).
       </p>
+      <h3>Phase II</h3>
+      After we have completed Notebooks on the outlined topics above, we wish to dedicate the next 2 months to taking the code that has been written for the simulations in the tutorials, and modify
+      it to create a small Python library, where users can utilize recent NISQ and QML algorithms at a very high level (for instance, one can simply call an instance of a Quantum Graph Neural Network in
+      a few lines of code) in a variety of different languages. This kind of work is being done to a certain extent in other libraries, however, we hope to focus on making methods that work for a variety of
+      quantum computational libraries, and focus on recent algorithms that are less likely to have pre-exisiting built-in functions associated with them. The reason for this high-level approach is to allow
+      researchers and enthusiasts outside of the quantum research community to experiment with recent algorithms, and attempt to apply quantum methods to some of their problems.
       <br><br>
     </div>
     </div>
