--- a/new_blog/index.html
+++ b/new_blog/index.html
@@ -20,6 +20,7 @@
             <hr class="line">
             <h4 style="padding-top:15px;font-size:14px;"><b>2020</b></h4>
             <ul>
+                <li>May 05 2020 // <a href="https://lucaman99.github.io/new_blog/2020/may5.html">Abstract Algebra Thoughts #1</a></li>
                 <li>Mar 16 2020 // <a href="https://lucaman99.github.io/new_blog/2020/mar16.html">Fun With Graphs and QAOA</a></li>
             </ul>
                 <h4 style="padding-top:15px;font-size:14px;"><b>2019</b></h4>
