--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
 <p>I'm currently working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing.</p>
 </div>
     <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
-    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> </p>
+    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
     <p><a href="https://lucaman99.github.io/newsletters/">Subscribe to my monthly newsletter</a></p>
@@ -54,7 +54,7 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
       <li><a href="https://lucaman99.github.io/physics">Physics</a></li>
       <li><a href="https://lucaman99.github.io/content">Additional Content/Other Fun Stuff</a></li>
     </ul>
-    <br><br>
+    <br>
     <hr style="width:700px;float:left;">
   </div>
 </body>
