--- a/morin/6/29.html
+++ b/morin/6/29.html
@@ -120,6 +120,13 @@
                     Now, let's think about what this actually means. Essentially, we have found that the quantity $\sin \alpha$ oscillates in SHM, independent of ampltidue. at some constant frequency. This means that the
                     time that the period of the pendulum's motion is constant as well, as this implies that the time it takes for $\alpha$ to complete one "cycle" is independent of amplitude as well.
                     <br><br>
+                    Below is a video showing a simulation that I made using Python of the evolution of the cycloidal pendulum:
+                    <br><br><br><br><br><br>
+                    <center>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1cgU-jJ03TM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </center>
+                    <br><br><br><br>
+                    <br>
                 </p>
             </div>
             </center>
