--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
   <div style="float:right;position:absolute;right:30vw;margin-top:100px;">
   </div>
-  <div style="text-align:left">
-    <h1 style="padding-top:5px;">Jack Ceroni's Home Page</h1>
-    <div style="width:700px;">
+  <div style="margin-left:17vw;margin-right:15vw;text-align:left">
+    <h1 style="padding-top:20px;font-size:22px;">Jack Ceroni's Home Page</h1>
+    <div style="width:900px;">
     <h3>About Me</h3>
     <p>Hello there! My name is Jack, and I'm a high school student from the Greater Toronto Area with interests in mathematics, physics, engineering and quantum computing.
     In my free time, I like to:</p>
@@ -47,7 +47,7 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
     </p>
     <p><a href="https://lucaman99.github.io/newsletters/">Subscribe to my monthly newsletter</a></p>
     <br>
-    <hr style="width:700px;float:left;">
+    <hr class="line" style="width:900px;">
     <br>
     <h3>Current Projects</h3>
     <ul>
@@ -58,18 +58,28 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
       <li><a href="https://lucaman99.github.io/content">Additional Content/Other Fun Stuff</a></li>
     </ul>
     <br>
-    <hr style="width:700px;float:left;">
+    <hr class="line" style="width:900px;float:left;">
   </div>
 </body>
 <style>
  body {
-     font-family:'Times New Roman', Times, serif;
+  font-family:"Lucida Console", Monaco, monospace;
  }
  ul {
-     font-size:16px;
+     font-size:12px;
  }
  p {
-     font-size:16px;
+     font-size:12px;
  }
+ .line {
+     border:0;
+     height:1px;
+     float:left;
+     background-image:-webkit-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-moz-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
+ }
+ a:hover{text-decoration:none;color:grey}a{color:#000;}
 </style>
 </html>
